[package]
name = "icechunk-storage"
version = "2.0.0-alpha.4"
description = "Storage trait and shared types for icechunk"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
icechunk-types = { path = "../icechunk-types", version = "2.0.0-alpha.4" }

async-trait = "0.1.89"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
futures = "0.3.32"
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util", "macros"] }
tokio-util = { version = "0.7.18", features = ["io-util"] }
tracing = "0.1.44"
typetag = "0.2.21"
url = { version = "2.5.8", features = ["serde"] }

[lints]
workspace = true
