[package]
name = "icechunk-storage"
version = "2.0.0-alpha.7"
description = "Storage trait and shared types for icechunk"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
icechunk-types.workspace = true

async-trait.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "macros"] }
tokio-util.workspace = true
tracing.workspace = true
typetag.workspace = true
url.workspace = true

[lints]
workspace = true
