[package]
name = "icechunk-types"
version = "2.0.0"
description = "Shared foundational types for icechunk"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tracing-error.workspace = true
typed-path.workspace = true

[lints]
workspace = true
