[package]
name = "icechunk"
version = "0.3.14"
description = "Transactional storage engine for Zarr designed for use on cloud object storage"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition = "2024"
publish = true

[dependencies]
async-trait = "0.1.89"
bytes = { version = "1.11.1", features = ["serde"] }
base64 = "0.22.1"
futures = "0.3.32"
itertools = "0.14.0"
object_store = { version = "0.13.1", features = [
  "aws",
  "gcp",
  "azure",
  "http",
] }
rand = "0.10.0"
thiserror = "2.0.18"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_with = { version = "3.16.1", features = ["hex"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
quick_cache = "0.6.18"
base32 = "0.5.1"
chrono = { version = "0.4.43", features = ["serde"] }
async-recursion = "1.1.1"
rmp-serde = "1.3.1"
url = { version = "2.5.8", features = ["serde"] }
async-stream = "0.3.6"
rmpv = { version = "1.3.1", features = ["serde", "with-serde"] }
aws-sdk-s3 = "1.120.0"
aws-config = "1.8.12"
aws-credential-types = "1.2.13"
typed-path = "0.12.3"
aws-smithy-runtime = "1.10.2"
aws-smithy-types-convert = { version = "0.60.13", features = [
  "convert-chrono",
  "convert-streams",
] }
typetag = "0.2.21"
zstd = "0.13.3"
tokio-util = { version = "0.7.18", features = ["compat", "io-util"] }
serde_bytes = "0.11.19"
regex = "1.12.3"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = [
  "env-filter",
], optional = true }
tracing = "0.1.44"
err-into = "1.0.1"
serde_yaml_ng = "0.10.0"
clap = { version = "4.5", features = ["derive"], optional = true }
anyhow = { version = "1.0.101", optional = true }
dialoguer = { version = "0.12.0", optional = true }
dirs = { version = "6.0.0", optional = true }
flexbuffers = "25.12.19"
flatbuffers = "25.12.19"
urlencoding = "2.1.3"
backon = "1.6.0"

# reqwest's default-features enables default-tls which ultimately leads to an openssl dependencies
# which we are not including as it is not included in manylinux wheels. Instead depend on rustls-tls only
# https://github.com/earth-mover/icechunk/issues/1400
reqwest = { version = "0.12.28", default-features = false, features = [
  "rustls-tls",
  # defaults we rely on. Add explicitly because we set default-features to false
  "charset",
  "http2",
  "system-proxy",
] }
[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
assert_fs = "1.1.3"
fs_extra = "1.3.0"
icechunk-macros = { path = "../icechunk-macros", version = "0.1.0" }
port_check = "0.3.0"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
proptest-state-machine = "0.7.0"
tempfile = "3.25.0"
test-log = { version = "0.2.19", default-features = false, features = [
  "trace",
  "color",
  "unstable",
] }
test-strategy = "0.4.5"
warp = { version = "0.4.2", features = ["server"] }
noxious-client = "1.0"
uuid = { version = "1.21", features = ["v4"] }

[lints]
workspace = true

[features]
logs = ["dep:tracing-subscriber"]
cli = ["dep:clap", "dep:anyhow", "dep:dialoguer", "dep:dirs"]

[[bin]]
name = "icechunk"
path = "src/bin/icechunk/main.rs"
required-features = ["cli"]
