[package]
name = "icechunk"
version = "2.0.0-alpha.4"
description = "Transactional storage engine for Zarr designed for use on cloud object storage"
readme = "../README.md"
repository = "https://github.com/earth-mover/icechunk"
homepage = "https://icechunk.io"
license = "Apache-2.0"
keywords = ["zarr", "xarray", "database"]
categories = ["database", "science", "science::geo"]
authors = ["Earthmover PBC"]
edition.workspace = true
publish = true
rust-version.workspace = true
autobenches = false
autotests = false

[dependencies]
icechunk-arrow-object-store = { path = "../icechunk-arrow-object-store", version = "2.0.0-alpha.4" }
icechunk-format = { path = "../icechunk-format", version = "2.0.0-alpha.4" }
icechunk-storage = { path = "../icechunk-storage", version = "2.0.0-alpha.4" }
icechunk-types = { path = "../icechunk-types", version = "2.0.0-alpha.4" }
icechunk-s3 = { path = "../icechunk-s3", version = "2.0.0-alpha.4", optional = true }

async-compression = { version = "0.4.41", features = ["tokio", "zstd"] }
async-recursion = "1.1.1"
async-stream = "0.3.6"
async-trait = "0.1.89"
backon = "1.6.0"
bytes = { version = "1.11.1", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
flexbuffers = "25.12.19"
futures = "0.3.32"
itertools = "0.14.0"
quick_cache = "0.6.21"
rand = "0.10.0"
regex = "1.12.3"
rmp-serde = "1.3.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
serde_with = { version = "3.18.0", features = ["hex"] }
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
typetag = "0.2.21"
url = { version = "2.5.8", features = ["serde"] }
urlencoding = "2.1.3"
zstd = "0.13.3"

# Optional dependencies
anyhow = { version = "1.0.102", optional = true }
clap = { version = "4.6", features = ["derive"], optional = true }
dialoguer = { version = "0.12.0", optional = true }
dirs = { version = "6.0.0", optional = true }
reqwest = { version = "0.13", optional = true }
tracing-subscriber = { version = "0.3.23", features = [
  "env-filter",
], optional = true }
# shuttle-tokio = { package = "shuttle-tokio", git = "https://github.com/awslabs/shuttle", branch = "main", features = [
#   "rt-multi-thread",
#   "macros",
# ], version = "0.1.0", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.50.0", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "time",
  "io-util",
  "rt",
] }

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.50.0", features = [
  "rt",
  "macros",
  "sync",
  "time",
  "io-util",
] }

[dev-dependencies]
icechunk-macros = { path = "../icechunk-macros", version = "0.1.0" }

assert_fs = "1.1.3"
clap = { version = "4.6", features = ["derive"] }
criterion = { version = "0.8.2", features = ["async_tokio"] }
fs_extra = "1.3.0"
noxious-client = "1.0"
port_check = "0.3.0"
pretty_assertions = "1.4.1"
proptest = "1.10.0"
proptest-state-machine = "0.7.0"
reqwest = { version = "0.13", features = ["json"] }
rstest = "0.26.1"
rstest_reuse = "0.7.0"
tempfile = "3.27.0"
test-log = { version = "0.2.19", default-features = false, features = [
  "trace",
  "color",
  "unstable",
] }
test-strategy = "0.4.5"
tracing-chrome = "0.7"
tracing-samply = "0.1.5"
uuid = { version = "1.22", features = ["v4"] }
warp = { version = "0.4.2", features = ["server"] }
# shuttle = { git = "https://github.com/awslabs/shuttle", branch = "main" }

[lints]
workspace = true

[features]
default = [
  "s3",
  "object-store-s3",
  "object-store-gcs",
  "object-store-azure",
  "object-store-http",
  "object-store-fs",
  "redirect",
]
napi-send-contract = []
s3 = ["dep:icechunk-s3"]
object-store-s3 = ["icechunk-arrow-object-store/s3"]
object-store-gcs = ["icechunk-arrow-object-store/gcs"]
object-store-azure = ["icechunk-arrow-object-store/azure"]
object-store-http = ["icechunk-arrow-object-store/http"]
object-store-fs = ["icechunk-arrow-object-store/fs"]
redirect = ["dep:reqwest"]
logs = ["dep:tracing-subscriber"]
cli = ["dep:clap", "dep:anyhow", "dep:dialoguer", "dep:dirs"]
# shuttle = ["dep:shuttle-tokio", "shuttle-tokio/shuttle"]
shuttle = []

[[bin]]
name = "icechunk"
path = "src/bin/icechunk/main.rs"
required-features = ["cli"]

[[test]]
name = "main"
path = "tests/main.rs"

[[test]]
name = "test_shuttle"
path = "tests/test_shuttle.rs"

[[bench]]
name = "main"
harness = false

[package.metadata.cargo-machete]
ignored = ["serde_bytes"]
